--- a/slides/14-gadt.tex
+++ b/slides/14-gadt.tex
@@ -126,7 +126,7 @@ data Maybe a where
 \end{frame}
 
 \begin{frame}[fragile]
-  \frametitle{Language definition with GADTs}
+  \frametitle{Language definition without GADTs}
   \begin{block}{}
     \begin{lstlisting}
 data Term =
@@ -139,7 +139,7 @@ data Term =
 \end{frame}
 
 \begin{frame}[fragile]
-  \frametitle{Language definition with GADTs}
+  \frametitle{Language definition with GADT syntax}
   \begin{block}{}
     \begin{lstlisting}
 data Term where
