prepare lecture Nov 12

--- a/slides/06-higher-order.tex
+++ b/slides/06-higher-order.tex
@@ -301,7 +301,7 @@ foldr (+) 0 :: [Int] -> Int
 -- less than 0
 (< 0) :: Int -> Bool
 -- greater than 0
-(0 >) :: Int -> Bool
+(0 <) :: Int -> Bool
 \end{verbatim}
   can be done with every infix function
 \end{frame}
