--- a/code2024/src/V20250107.md
+++ b/code2024/src/V20250107.md
@@ -95,3 +95,41 @@ CASE (LEFT M) L R
 →β* (λl. λr. l M) L R
 →β→β L M
 
+
+## the fixed point theorem
+
+Y = λ f. (λx.f (x x)) (λx.f (x x))
+
+Y M
+→β (λx.M (x x)) (λx.M (x x))
+→β M ((λx.M (x x)) (λx.M (x x)))
+←β M (Y M)
+
+⇒ Y M is a fixed point of M
+
+## multiplication using fixed point
+## Scott encoding
+## (x′ + 1) * y = y + (x′ * y)
+
+## without fixed point, using recursion
+mul = λ x y. CASE_Nat x |Zero| (λ x′. |add| y (mul x′ y))
+
+## with fixed point
+fₘ = λmul. λ x y. CASE_Nat x |Zero| (λ x′. |add| y (mul x′ y))
+|mul| = Y fₘ
+
+### unification / unifier
+
+𝓔 = { Bool ≐ Int }
+⇒ no unifier exists
+
+𝓔 = { Bool ≐ α }
+⇒ S = α ↦ Bool  is most general unifier
+
+𝓔 = { Int → α ≐ β → Bool }
+⇒ S = α ↦ Bool, β ↦ Int
+
+
+𝓔 = { Int → α ≐ Int → β }
+⇒ S = α ↦ β           is most general unifier
+⇒ S′ = α ↦ T, β ↦ T   is also a unifier for any T
